crates/ruff_python_parser/tests/snapshots/invalid_syntax@type_param_param_spec_invalid_default_expr.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/type_param_param_spec_invalid_default_expr.py
---
## AST

```
Module(
    ModModule {
        node_index: AtomicNodeIndex(..),
        range: 0..140,
        body: [
            TypeAlias(
                StmtTypeAlias {
                    node_index: AtomicNodeIndex(..),
                    range: 0..24,
                    name: Name(
                        ExprName {
                            node_index: AtomicNodeIndex(..),
                            range: 5..6,
                            id: Name("X"),
                            ctx: Store,
                        },
                    ),
                    type_params: Some(
                        TypeParams {
                            range: 6..18,
                            node_index: AtomicNodeIndex(..),
                            type_params: [
                                ParamSpec(
                                    TypeParamParamSpec {
                                        range: 7..17,
                                        node_index: AtomicNodeIndex(..),
                                        name: Identifier {
                                            id: Name("P"),
                                            range: 9..10,
                                            node_index: AtomicNodeIndex(..),
                                        },
                                        default: Some(
                                            Starred(
                                                ExprStarred {
                                                    node_index: AtomicNodeIndex(..),
                                                    range: 13..17,
                                                    value: Name(
                                                        ExprName {
                                                            node_index: AtomicNodeIndex(..),
                                                            range: 14..17,
                                                            id: Name("int"),
                                                            ctx: Load,
                                                        },
                                                    ),
                                                    ctx: Load,
                                                },
                                            ),
                                        ),
                                    },
                                ),
                            ],
                        },
                    ),
                    value: Name(
                        ExprName {
                            node_index: AtomicNodeIndex(..),
                            range: 21..24,
                            id: Name("int"),
                            ctx: Load,
                        },
                    ),
                },
            ),
            TypeAlias(
                StmtTypeAlias {
                    node_index: AtomicNodeIndex(..),
                    range: 25..52,
                    name: Name(
                        ExprName {
                            node_index: AtomicNodeIndex(..),
                            range: 30..31,
                            id: Name("X"),
                            ctx: Store,
                        },
                    ),
                    type_params: Some(
                        TypeParams {
                            range: 31..46,
                            node_index: AtomicNodeIndex(..),
                            type_params: [
                                ParamSpec(
                                    TypeParamParamSpec {
                                        range: 32..45,
                                        node_index: AtomicNodeIndex(..),
                                        name: Identifier {
                                            id: Name("P"),
                                            range: 34..35,
                                            node_index: AtomicNodeIndex(..),
                                        },
                                        default: Some(
                                            Yield(
                                                ExprYield {
                                                    node_index: AtomicNodeIndex(..),
                                                    range: 38..45,
                                                    value: Some(
                                                        Name(
                                                            ExprName {
                                                                node_index: AtomicNodeIndex(..),
                                                                range: 44..45,
                                                                id: Name("x"),
                                                                ctx: Load,
                                                            },
                                                        ),
                                                    ),
                                                },
                                            ),
                                        ),
                                    },
                                ),
                            ],
                        },
                    ),
                    value: Name(
                        ExprName {
                            node_index: AtomicNodeIndex(..),
                            range: 49..52,
                            id: Name("int"),
                            ctx: Load,
                        },
                    ),
                },
            ),
            TypeAlias(
                StmtTypeAlias {
                    node_index: AtomicNodeIndex(..),
                    range: 53..85,
                    name: Name(
                        ExprName {
                            node_index: AtomicNodeIndex(..),
                            range: 58..59,
                            id: Name("X"),
                            ctx: Store,
                        },
                    ),
                    type_params: Some(
                        TypeParams {
                            range: 59..79,
                            node_index: AtomicNodeIndex(..),
                            type_params: [
                                ParamSpec(
                                    TypeParamParamSpec {
                                        range: 60..78,
                                        node_index: AtomicNodeIndex(..),
                                        name: Identifier {
                                            id: Name("P"),
                                            range: 62..63,
                                            node_index: AtomicNodeIndex(..),
                                        },
                                        default: Some(
                                            YieldFrom(
                                                ExprYieldFrom {
                                                    node_index: AtomicNodeIndex(..),
                                                    range: 66..78,
                                                    value: Name(
                                                        ExprName {
                                                            node_index: AtomicNodeIndex(..),
                                                            range: 77..78,
                                                            id: Name("x"),
                                                            ctx: Load,
                                                        },
                                                    ),
                                                },
                                            ),
                                        ),
                                    },
                                ),
                            ],
                        },
                    ),
                    value: Name(
                        ExprName {
                            node_index: AtomicNodeIndex(..),
                            range: 82..85,
                            id: Name("int"),
                            ctx: Load,
                        },
                    ),
                },
            ),
            TypeAlias(
                StmtTypeAlias {
                    node_index: AtomicNodeIndex(..),
                    range: 86..114,
                    name: Name(
                        ExprName {
                            node_index: AtomicNodeIndex(..),
                            range: 91..92,
                            id: Name("X"),
                            ctx: Store,
                        },
                    ),
                    type_params: Some(
                        TypeParams {
                            range: 92..108,
                            node_index: AtomicNodeIndex(..),
                            type_params: [
                                ParamSpec(
                                    TypeParamParamSpec {
                                        range: 93..100,
                                        node_index: AtomicNodeIndex(..),
                                        name: Identifier {
                                            id: Name("P"),
                                            range: 95..96,
                                            node_index: AtomicNodeIndex(..),
                                        },
                                        default: Some(
                                            Name(
                                                ExprName {
                                                    node_index: AtomicNodeIndex(..),
                                                    range: 99..100,
                                                    id: Name("x"),
                                                    ctx: Load,
                                                },
                                            ),
                                        ),
                                    },
                                ),
                                TypeVar(
                                    TypeParamTypeVar {
                                        range: 104..107,
                                        node_index: AtomicNodeIndex(..),
                                        name: Identifier {
                                            id: Name("int"),
                                            range: 104..107,
                                            node_index: AtomicNodeIndex(..),
                                        },
                                        bound: None,
                                        default: None,
                                    },
                                ),
                            ],
                        },
                    ),
                    value: Name(
                        ExprName {
                            node_index: AtomicNodeIndex(..),
                            range: 111..114,
                            id: Name("int"),
                            ctx: Load,
                        },
                    ),
                },
            ),
            TypeAlias(
                StmtTypeAlias {
                    node_index: AtomicNodeIndex(..),
                    range: 115..139,
                    name: Name(
                        ExprName {
                            node_index: AtomicNodeIndex(..),
                            range: 120..121,
                            id: Name("X"),
                            ctx: Store,
                        },
                    ),
                    type_params: Some(
                        TypeParams {
                            range: 121..133,
                            node_index: AtomicNodeIndex(..),
                            type_params: [
                                ParamSpec(
                                    TypeParamParamSpec {
                                        range: 122..132,
                                        node_index: AtomicNodeIndex(..),
                                        name: Identifier {
                                            id: Name("P"),
                                            range: 124..125,
                                            node_index: AtomicNodeIndex(..),
                                        },
                                        default: Some(
                                            Starred(
                                                ExprStarred {
                                                    node_index: AtomicNodeIndex(..),
                                                    range: 128..132,
                                                    value: Name(
                                                        ExprName {
                                                            node_index: AtomicNodeIndex(..),
                                                            range: 129..132,
                                                            id: Name("int"),
                                                            ctx: Load,
                                                        },
                                                    ),
                                                    ctx: Load,
                                                },
                                            ),
                                        ),
                                    },
                                ),
                            ],
                        },
                    ),
                    value: Name(
                        ExprName {
                            node_index: AtomicNodeIndex(..),
                            range: 136..139,
                            id: Name("int"),
                            ctx: Load,
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | type X[**P = *int] = int
  |              ^^^^ Syntax Error: Starred expression cannot be used here
2 | type X[**P = yield x] = int
3 | type X[**P = yield from x] = int
  |


  |
1 | type X[**P = *int] = int
2 | type X[**P = yield x] = int
  |              ^^^^^^^ Syntax Error: Yield expression cannot be used here
3 | type X[**P = yield from x] = int
4 | type X[**P = x := int] = int
  |


  |
1 | type X[**P = *int] = int
2 | type X[**P = yield x] = int
3 | type X[**P = yield from x] = int
  |              ^^^^^^^^^^^^ Syntax Error: Yield expression cannot be used here
4 | type X[**P = x := int] = int
5 | type X[**P = *int] = int
  |


  |
2 | type X[**P = yield x] = int
3 | type X[**P = yield from x] = int
4 | type X[**P = x := int] = int
  |                ^^ Syntax Error: Expected ',', found ':='
5 | type X[**P = *int] = int
  |


  |
3 | type X[**P = yield from x] = int
4 | type X[**P = x := int] = int
5 | type X[**P = *int] = int
  |              ^^^^ Syntax Error: Starred expression cannot be used here
  |


## Semantic Syntax Errors

  |
1 | type X[**P = *int] = int
2 | type X[**P = yield x] = int
  |              ^^^^^^^ Syntax Error: yield expression cannot be used within a ParamSpec default
3 | type X[**P = yield from x] = int
4 | type X[**P = x := int] = int
  |


  |
1 | type X[**P = *int] = int
2 | type X[**P = yield x] = int
3 | type X[**P = yield from x] = int
  |              ^^^^^^^^^^^^ Syntax Error: yield expression cannot be used within a ParamSpec default
4 | type X[**P = x := int] = int
5 | type X[**P = *int] = int
  |
